--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>M Marcelo Arief Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -129,7 +129,7 @@
 						<div class="about-desc">
 							<div class="owl-carousel3">
 								<div class="item">
-									<h2><span>Noah</span><span>Henderson</span></h2>
+									<h2><span>Muhammad</span><span>Marcelo</span><span>Arief</span></h2>
 								</div>
 								<div class="item">
 									<h2><span>I'm</span><span>A Designer</span></h2>
@@ -137,7 +137,7 @@
 							</div>
 							<div class="desc">
 								<div class="rotate">
-									<h2 class="heading">About</h2>
+									<h2 class="heading">About Me</h2>
 								</div>
 								<p>A small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
 								<p class="colorlib-social-icons">
