--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 									<a href="#"><i class="icon-googleplus"></i></a>
 									<a href="#"><i class="icon-dribbble2"></i></a>
 								</p>
-								<p><a href="#" class="btn btn-primary btn-outline">Contact Me!</a></p>
+								<p><a href="mailto:marcelloariev@gmail.com" class="btn btn-primary btn-outline">Contact Me!</a></p>
 							</div>
 						</div>
 					</div>
@@ -176,9 +176,9 @@
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>1 - Graphic Design</h3>
+											<h3>1 - Cybersecurity/h3>
 											<ul>
-												<li>UI Design</li>
+												<li>SIEM</li>
 												<li>Website &amp; Digital Design</li>
 												<li>Brading &amp; Visual Identity</li>
 												<li>Print Design</li>
@@ -188,9 +188,7 @@
 											<h3>3 - Front End Development</h3>
 											<ul>
 												<li>HTML / CSS</li>
-												<li>JS &amp; Jquery Startup</li>
-												<li>WordPress</li>
-												<li>Jomla</li>
+												<li>Javascript</li>
 											</ul>
 										</div>
 									</div>
