--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>1 - Cybersecurity/h3>
+											<h3>1 - Cybersecurity</h3>
 											<ul>
 												<li>SIEM</li>
 												<li>Website &amp; Digital Design</li>
