--- a/index.html
+++ b/index.html
@@ -179,9 +179,10 @@
 											<h3>1 - Cybersecurity</h3>
 											<ul>
 												<li>SIEM</li>
-												<li>Website &amp; Digital Design</li>
-												<li>Brading &amp; Visual Identity</li>
-												<li>Print Design</li>
+												<li>Kali Linux</li>
+												<li>Nmap</li>
+												<li>Burpsuite</li>
+												<li>Metasploit &amp; Searchploit</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
@@ -194,21 +195,18 @@
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>2 - Illustration</h3>
+											<h3>2 - Programming & Databases</h3>
 											<ul>
-												<li>Editorial</li>
-												<li>Narrative</li>
-												<li>Motion Graphics</li>
-												<li>Animation</li>
-												<li>Visual Effects</li>
+												<li>Python</li>
+												<li>Sql</li>
+												<li>C++</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>4 - Web Marketing</h3>
+											<h3>4 - Networking</h3>
 											<ul>
-												<li>Sales Marketing</li>
-												<li>Invoice</li>
-												<li>eCommerce</li>
+												<li>MikroTik</li>
+												<li>Network Design</li>
 											</ul>
 										</div>
 									</div>
