--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>Home</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -139,7 +139,7 @@
 								<div class="rotate">
 									<h2 class="heading">About Me</h2>
 								</div>
-								<p>An ordinary person trying to pursue deeper into cybersecurity and programming world <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>An ordinary person trying to pursue deeper into IT World. so far i have study about foundation of cybersecurity, programming, data analytic and front-end web development</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
