minor change to profile pict

--- a/index.html
+++ b/index.html
@@ -132,9 +132,11 @@
 									<h2><span>Muhammad</span><span>Marcelo</span><span>Arief</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>I'm</span><span>A Designer</span></h2>
+									<h2><span>I'm </span><span>A Security<span>Analyst</span></span></h2>
 								</div>
-							</div>
+								<div class="item">
+									<h2><span>I'm </span><span>A Front-end<span>Web Developer</span></span></h2>
+								</div>
 							<div class="desc">
 								<div class="rotate">
 									<h2 class="heading">About Me</h2>
