--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 								<div class="col-md-10">
 									<h2>Let's Talk</h2>
 									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
+									<p><a href="mailto:marcelloariev@gmail.com">marcelloariev@gmail.com</a></p>
 									<p class="colorlib-social-icons">
 										<a href="#"><i class="icon-facebook4"></i></a>
 										<a href="#"><i class="icon-twitter3"></i></a>
