minor change to work and index
added social media link
change work picture from template

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 								<p>An ordinary person trying to pursue deeper into IT World. so far i have study about foundation of cybersecurity, programming, data analytic and front-end web development</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
-									<a href="#"><i class="icon-twitter3"></i></a>
-									<a href="#"><i class="icon-googleplus"></i></a>
+									<a href="https://twitter.com/marcelloarief"><i class="icon-twitter3"></i></a>
+									<a href="https://www.linkedin.com/in/m-marcelo-arief-aa9b51188/"><i class="icon-linkedin"></i></a>
 									<a href="#"><i class="icon-dribbble2"></i></a>
 								</p>
 								<p><a href="mailto:marcelloariev@gmail.com" class="btn btn-primary btn-outline">Contact Me!</a></p>
@@ -297,14 +297,15 @@
 							<a href="work.html" class="work-img" style="background-image: url(images/work-4.jpg);">
 								<div class="display-t">
 									<div class="work-name">
-										<h2>Black</h2>
+										<h2>IoT Based</h2>
+										<h2>Cat Feeding Tank</h2>
 									</div>
 								</div>
 							</a>
 							<div class="col-md-4 col-md-offset-4">
 								<div class="desc">
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-									<p class="read"><a href="#">View details</a></p>
+									<p class="read"><a href="work4.html">View details</a></p>
 								</div>
 							</div>
 						</div>
