--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 											<ul>
 												<li>HTML / CSS</li>
 												<li>Javascript</li>
+												<li>Tailwind</li>
 											</ul>
 										</div>
 									</div>
