First commit after maintenance add index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio</title>
-</head>
-<body>
-	<img src="img/maintenance.jpg" alt="Maintenance">
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>M Marcelo Arief | Portfolio</title>
+  </head>
+  <body>
+    <img src="img/maintenance.jpg" alt="Maintenance" />
+  </body>
 </html>
