--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>M Marcelo Arief | Portfolio</title>
   </head>
   <body>
-    <img src="img/maintenance.jpg" alt="Maintenance" />
+    <!-- Wallpaper -->
+     <div class="wallpaper">
+      <a href="src/wallpaper.png"></a>
+     </div>
+    <!-- Wallpaper End -->
+    <!-- Taskbar -->
+     <div class="taskbar">
+      <a href="src/start-menu.png"></a>
+     </div>
+    <!-- Taskbar End -->
   </body>
 </html>
