add taskbar and start-menu container

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- Wallpaper End -->
     <!-- Taskbar -->
      <div class="taskbar">
-      <a href="src/start-menu.png"></a>
+      <div class="start-menu">
+        <a href="src/start-menu.png"></a>
+      </div>
      </div>
     <!-- Taskbar End -->
   </body>
