--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   <body>
     <!-- Wallpaper -->
      <div class="wallpaper">
-      <a href="src/wallpaper.png"></a>
+      <a href="#">
+        <img src="assets/wallpaper.png" alt="Wallpaper">
+      </a>
      </div>
     <!-- Wallpaper End -->
     <!-- Taskbar -->
      <div class="taskbar">
       <div class="start-menu">
-        <a href="src/start-menu.png"></a>
+        <a href="#">
+          <img src="assets/start-menu.png" alt="Start Menu">
+        </a>
       </div>
      </div>
     <!-- Taskbar End -->
